--- a/docs/public/manifest.json
+++ b/docs/public/manifest.json
@@ -2,14 +2,14 @@
   "name": "Tournament Bracket Manager",
   "short_name": "Brackets",
   "description": "Professional sports tournament bracket management for 30+ disciplines",
-  "start_url": "/",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#2563eb",
   "orientation": "any",
   "icons": [
     {
-      "src": "/favicon.png",
+      "src": "./favicon.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
